# RustyCAN

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  index.html  traceability.csv  traceability.html
.github/: dependabot.yml
.github/workflows/: ci.yml  doorstop.yml  release.yml
.readme/: BRING_UP_PLAN.md  DONGLE_H743_BRINGUP.md  bbd.md  building.md  can-fd-setup.md  cli-config.md  cli-tui.md  dbc-signal-decoding.md  features.md  firmware-update.md  gui-guide.md  install-linux.md  install-macos.md  install-windows.md  installation-index.md  jsonl-format.md  lcd-terminal.md  live-dashboard.md  logging-performance.md  multi-node-stability.md  prerequisites.md  project-structure.md  testing.md
assets/: RustyCAN.icns
documents/: SOUP.html  SOUPANOM.html  SOUPTC.html
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/bootloader-h743/: Cargo.toml  build.rs  memory.x
firmware/bootloader-h743/src/: main.rs
firmware/bootloader-h753/: Cargo.toml  build.rs  memory.x
firmware/bootloader-h753/src/: main.rs
firmware/bootloader-size-probe/: Cargo.toml  build.rs  memory.x
firmware/bootloader-size-probe/src/: main.rs
firmware/dongle-h743/: Cargo.toml  build.rs  memory.x
firmware/dongle-h743/.cargo/: config.toml
firmware/dongle-h743/src/: can_task.rs  dfu_app.rs  display_task.rs  echo_task.rs  ep0_handler.rs  kcan_usb.rs  main.rs  status_task.rs  usb_task.rs
firmware/dongle-h753/: Cargo.toml  build.rs  memory.x
firmware/dongle-h753/src/: bus_test.rs  can_task.rs  dfu_app.rs  echo_task.rs  ep0_handler.rs  kcan_usb.rs  main.rs  status_task.rs  usb_task.rs
firmware/dongle-h7s3/: dongle-h7s3.ioc  to-do.md
firmware/dongle-h7s3/kicad/: dongle-h7s3.kicad_pcb  dongle-h7s3.kicad_prl  dongle-h7s3.kicad_pro  dongle-h7s3.kicad_sch
firmware/lcd-terminal/: Cargo.toml  build.rs
firmware/lcd-terminal/src/: console.rs  font.rs  handoff.rs  icon.rs  lib.rs  ltdc.rs  renderer.rs  sdram.rs
host/: Cargo.toml  build.rs  config.example.json  config.kcan-h743.json  config.kcan.json  config.linux.json  config.peak-echo-test.json  config.phase5-mac.json  config.windows.json
host/assets/: RustyCAN.icns  index.html  sse_preview.html
host/packaging/: 50-rustycan.rules
host/src/: app.rs  http_server.rs  lib.rs  logger.rs  main.rs  session.rs  updater.rs
host/src/adapters/: kcan.rs  mod.rs  peak.rs  socketcan_adapter.rs
host/src/canopen/: emcy.rs  mod.rs  pdo.rs  sdo.rs  usdo.rs
host/src/dbc/: mod.rs  types.rs
host/src/dfu/: mod.rs
host/src/eds/: types.rs
host/src/gui/: mod.rs  plot_view.rs
host/src/tui/: log_stream.rs  mod.rs  widgets.rs
host/src/xdd/: mod.rs
host/tests/: integration_test.rs  ui_egui.rs  ui_tui.rs
host/tests/fixtures/: sample_bus.dbc  sample_drive.eds
kcan-protocol/: Cargo.toml
kcan-protocol/src/: control.rs  encrypted.rs  frame.rs  lib.rs
reqs/brand/: doorstop.css
reqs/soup/: .doorstop.yml  SOUP001.md  SOUP002.md  SOUP003.md  SOUP004.md  SOUP005.md  SOUP006.md  SOUP007.md  SOUP008.md  SOUP009.md  SOUP010.md  SOUP011.md  SOUP012.md  SOUP013.md  SOUP014.md  SOUP015.md  SOUP016.md  SOUP017.md  SOUP018.md  SOUP019.md  SOUP020.md  SOUP021.md  SOUP022.md  SOUP023.md  SOUP024.md  SOUP025.md
reqs/soupanom/: .doorstop.yml  SOUPANOM001.md  SOUPANOM002.md  SOUPANOM003.md  SOUPANOM004.md  SOUPANOM005.md  SOUPANOM006.md
reqs/souptc/: .doorstop.yml  SOUPTC001.md  SOUPTC002.md  SOUPTC003.md  SOUPTC004.md  SOUPTC005.md  SOUPTC006.md  SOUPTC007.md  SOUPTC008.md  SOUPTC009.md  SOUPTC010.md  SOUPTC011.md  SOUPTC012.md  SOUPTC013.md  SOUPTC014.md  SOUPTC015.md  SOUPTC016.md  SOUPTC017.md  SOUPTC018.md  SOUPTC019.md  SOUPTC020.md  SOUPTC021.md  SOUPTC022.md  SOUPTC023.md  SOUPTC024.md  SOUPTC025.md  SOUPTC026.md
src/: app.rs  lib.rs  logger.rs  main.rs  session.rs
src/canopen/: mod.rs  nmt.rs  pdo.rs  sdo.rs
src/eds/: mod.rs  types.rs
src/gui/: mod.rs
src/tui/: mod.rs  widgets.rs
tests/: integration_test.rs
tests/fixtures/: sample_drive.eds
tests/ui/: PROGRESS.md  capture-egui-headless.sh  run-fedora-xquartz.sh
tests/ui/playwright/: mock-server.ts  package-lock.json  package.json  playwright.config.ts
tests/ui/playwright/tests/: dashboard.spec.ts
tests/ui/screenshots/: tui_log_linux.txt  tui_main_linux.txt  tui_pdo_linux.txt  tui_sdo_input_linux.txt  tui_sdo_result_linux.txt
tools/remote-dev/: REMOTE_DEV.md  sync-from-remote.sh  sync-to-remote.sh
tools/sign-firmware/: Cargo.toml
tools/sign-firmware/src/: main.rs
