[package]
name = "rustycan"
version = "0.1.0"
edition = "2021"
description = "CANopen viewer: log and analyze SDO/PDO/NMT events from multiple EDS-described devices"

[[bin]]
name = "rustycan"
path = "src/main.rs"

[dependencies]
host-can = { version = "0.1", features = ["pcan"] }
embedded-can = "0.4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
