[workspace]
members = ["host", "kcan-protocol"]
resolver = "2"

# Patch phf_generator 0.11.x to use rand 0.9, removing the rand 0.8.6
# vulnerability (GHSA) that Dependabot flags via the ratatui→termwiz→phf chain.
# phf_generator is a build-time hash generator; the only change is the rand
# import path (rand::distributions → rand::distr).
[patch.crates-io]
phf_generator = { path = "vendor/phf_generator" }
# Vendored winit 0.30.13 with a one-line fix for the macOS
# _NSTouchBarFinder KVO crash (NSRangeException on display-cycle flush).
# touch_bar() now returns an empty NSTouchBar instead of nil so
# _NSTouchBarFinder stops at WinitView and never registers the KVO
# observers it later cannot remove.
winit = { path = "vendor/winit" }
