[package]
name = "rustycan"
version = "0.1.0"
edition = "2021"
description = "CANopen viewer: log and analyze SDO/PDO/NMT events from multiple EDS-described devices"

[[bin]]
name = "rustycan"
path = "src/main.rs"

[dependencies]
host-can = { version = "0.1", features = ["pcan"] }
embedded-can = "0.4"
clap = { version = "4", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
# KCAN dongle support
nusb = "0.1"
kcan-protocol = { path = "../kcan-protocol", features = ["std"] }
futures-lite = "2.6.1"

[dev-dependencies]
tempfile = "3"
