[package]
name = "rustycan"
version = "0.1.0"
edition = "2021"
description = "CANopen viewer: log and analyze SDO/PDO/NMT events from multiple EDS-described devices"

[[bin]]
name = "rustycan"
path = "src/main.rs"

[dependencies]
# host-can: pcan feature not enabled here — see target-specific sections below.
embedded-can = "0.4"
clap = { version = "4", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
# KCAN dongle support
nusb = "0.1"
kcan-protocol = { path = "../kcan-protocol", features = ["std"] }
futures-lite = "2.6.1"
# DBC file support
can-dbc = "9"
# Live HTTP/SSE server — streams JSONL events to http://localhost:7878/
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# host-can: pcan feature is only available on macOS and Windows.
# On Linux, PEAK hardware uses SocketCAN (kernel driver) and the proprietary
# libPCBUSB library does not support Linux — enabling pcan there causes a
# compile error in the upstream crate (host-can issue: missing cfg(linux) arm).
[target.'cfg(not(target_os = "linux"))'.dependencies]
host-can = { version = "0.1", features = ["pcan"] }

[target.'cfg(target_os = "linux")'.dependencies]
host-can = { version = "0.1", features = ["socketcan"] }

[dev-dependencies]
tempfile = "3"

# ─── Packaging (cargo-packager) ───────────────────────────────────────────────
[package.metadata.packager]
product-name = "RustyCAN"
identifier   = "com.kodezine.rustycan"
description  = "CANopen viewer: log and analyze SDO/PDO/NMT events from multiple EDS-described devices"
homepage     = "https://github.com/kodezine/RustyCAN"
authors      = ["Kodezine"]
license-file = "../LICENSE"
copyright    = "Copyright (c) Kodezine"
category     = "Utility"
icons        = [
  "assets/RustyCAN.icns",
  "assets/RustyCAN.ico",
  "assets/RustyCAN.iconset/icon_32x32.png",
  "assets/RustyCAN.iconset/icon_128x128.png",
  "assets/RustyCAN.iconset/icon_256x256.png",
  "assets/RustyCAN.iconset/icon_512x512.png",
]

# macOS: produce a DMG containing a drag-to-Applications .app bundle.
# .icns is already in assets/; rpath for libPCBUSB.dylib is set in build.rs.
# (format is selected via --formats flag on the CLI in release.yml)
[package.metadata.packager.macos]

# Windows: NSIS one-click installer (.exe).
# PCANBasic.dll is loaded at runtime via libloading — user installs PEAK drivers.
[package.metadata.packager.nsis]
installer-mode = "currentUser"

# Linux: udev rules for KCAN USB are in packaging/50-rustycan.rules — see README.
# (formats appimage,deb selected via --formats flag on the CLI in release.yml)
[package.metadata.packager.linux]
