[package]
name = "dongle-h753"
version = "0.1.0"
edition = "2021"
description = "KCAN dongle firmware for STM32H753ZI (Embassy)"

[[bin]]
name = "dongle-h753"
path = "src/main.rs"

[dependencies]
kcan-protocol = { path = "../../kcan-protocol", default-features = false }

embassy-stm32 = { version = "0.6", features = [
    "defmt",
    "stm32h753zi",
    "time-driver-tim2",
    "exti",
    "unstable-pac",
    "memory-x",
] }
embassy-executor  = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-usb       = { version = "0.6", features = ["defmt"] }
embassy-sync      = { version = "0.8", features = ["defmt"] }
embassy-time      = { version = "0.5", features = ["defmt", "tick-hz-1_000_000"] }
embassy-futures   = { version = "0.1" }
embedded-can      = "0.4"
# Force log to no_std: usbd-hid (transitive via embassy-usb) would otherwise pull it in with std.
log               = { version = "0.4", default-features = false }

cortex-m          = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt       = "0.7"
critical-section  = "1.1"

defmt             = "1.0"
defmt-rtt         = "1.0"
panic-probe       = { version = "1.0", features = ["print-defmt"] }

[profile.release]
opt-level    = "s"
lto          = true
codegen-units = 1
debug        = 2
